스크롤 이벤트 미완성

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "@types/gsap": "^3.0.0",
     "gsap": "^3.13.0",
     "next": "15.4.4",
