--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-scroll": "^1.9.3",
+    "react-tabs": "^6.1.0",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
